Test Org - Speridian/src/objects/BA_Group_Comp_Product_Rates__c.object
<CustomObject>
    <fields>
        <fullName>ba_Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Competitor Product</label>
        <referenceTo>BA_Group_Competitor_Product__c</referenceTo>
        <relationshipLabel>Competitor Product Rates</relationshipLabel>
        <relationshipName>Competitor_Product_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RateEffectiveDate__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_RateTerminationDate__c</fullName>
        <label>Rate Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_RateTier__c</fullName>
        <label>Rate Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1T</fullName>
                </value>
                <value>
                    <fullName>2T</fullName>
                </value>
                <value>
                    <fullName>3T</fullName>
                </value>
                <value>
                    <fullName>4T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Rate_Level__c</fullName>
        <label>Rate Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Subscriber/Spouse</fullName>
                </value>
                <value>
                    <fullName>Subscriber/Child</fullName>
                </value>
                <value>
                    <fullName>Subscriber/Children</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Prescription Drug</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Medical Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Competitor Product Rates</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitor Product Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Product Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>